--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,31 @@
 @import '~bootstrap/scss/bootstrap';
+
+body {
+  background-color: white;
+}
+
+.playground {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  width: 300px;
+  height: 300px;
+}
+
+.row {
+  height: 30%;
+}
+
+.col {
+  border: 3px solid red;
+  height: 100%;
+  width: 30px;
+  text-align: center;
+  float:left;
+}
+
+h1 {
+  color: red;
+  align-items: center;
+  justify-content: center;
+}
