--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,31 +1,20 @@
 @import '~bootstrap/scss/bootstrap';
 
-body {
-  background-color: white;
+.container {
+  height: 100vh;
 }
 
-.playground {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  width: 300px;
-  height: 300px;
+.board {
+  max-height: calc(100vh - 75px);
+  max-width: calc(100vh - 75px);
+  margin: auto;
 }
 
-.row {
-  height: 30%;
-}
-
-.col {
-  border: 3px solid red;
-  height: 100%;
-  width: 30px;
-  text-align: center;
-  float:left;
-}
-
-h1 {
-  color: red;
-  align-items: center;
-  justify-content: center;
-}
+.box {
+  border-bottom: 3px solid black;
+  border-right: : 3px solid black;
+  min-height: calc(100% / 3);
+  &.:nth-child(3n) {
+    border-right: 0px;
+    }
+  }
