--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,8 +2,13 @@
 
 .container {
   height: 100vh;
+  width: 100vh;
 }
-
+.tittle {
+  color: LightSkyBlue;
+  justify-content: center;
+  align-items: center;
+}
 .board {
   max-height: calc(100vh - 75px);
   max-width: calc(100vh - 75px);
@@ -11,10 +16,21 @@
 }
 
 .box {
+  color: white;
+  font-size: 15vh;
+  text-shadow: 2px 2px rgba(0 , 0, 0, .25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
   border-bottom: 3px solid black;
-  border-right: : 3px solid black;
+  border-right: 3px solid black;
   min-height: calc(100% / 3);
-  &.:nth-child(3n) {
+
+  &:nth-child(3n) {
     border-right: 0px;
+    }
+  &:hover {
+    background-color: LightSkyBlue;
     }
   }
