--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -16,6 +16,14 @@
   margin: auto;
 }
 
+#sign-up-form {
+  color: LightSkyBlue;
+}
+
+#sign-in-form {
+  color: LightSkyBlue;
+}
+
 .box {
   color: red;
   font-size: 15vh;
