--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,6 +4,7 @@
   height: 100vh;
   width: 100vh;
 }
+
 .tittle {
   display: flex;
   color: LightSkyBlue;
@@ -18,10 +19,30 @@
 
 #sign-up-form {
   color: LightSkyBlue;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 #sign-in-form {
   color: LightSkyBlue;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+#change-password-form {
+  color: LightSkyBlue;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+#sign-out-form {
+  color: LightSkyBlue;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 .box {
