--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,11 +4,14 @@
   height: 100vh;
   width: 100vh;
 }
+body {
+  background-color: rgb(232, 192, 158);
 
+}
 
 .title {
   display: flex;
-  color: LightSkyBlue;
+  color: rgb(94, 46, 4);
   justify-content: center;
   align-items: center;
 }
@@ -19,49 +22,55 @@
 }
 
 #sign-up-form {
-  color: LightSkyBlue;
+  color: rgb(94, 46, 4);
   align-items: center;
   justify-content: center;
   display: flex;
 }
 
 #sign-in-form {
-  color: LightSkyBlue;
+  color: rgb(94, 46, 4);
   align-items: center;
   justify-content: center;
   display: flex;
 }
 
 #change-password-form {
-  color: LightSkyBlue;
+  color: rgb(94, 46, 4);
   align-items: center;
   justify-content: center;
   display: flex;
 }
 
 #sign-out-form {
-  color: LightSkyBlue;
+  color: rgb(94, 46, 4);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+#start-game {
+  color: rgb(94, 46, 4);
   align-items: center;
   justify-content: center;
   display: flex;
 }
 
 .box {
-  color: red;
+  color: rgb(94, 46, 4);
   font-size: 15vh;
   text-shadow: 2px 2px rgba(0 , 0, 0, .25);
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: white;
-  border-bottom: 3px solid black;
-  border-right: 3px solid black;
+  border-bottom: 3px solid rgb(232, 192, 158);
+  border-right: 3px solid rgb(232, 192, 158);
   min-height: calc(100% / 3);
 
   &:nth-child(3n) {
     border-right: 0px;
     }
   &:hover {
-    background-color: LightSkyBlue;
+    background-color: rgb(161, 150, 143);
     }
   }
