--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -55,6 +55,20 @@ body {
   display: flex;
 }
 
+#message5 {
+  color: rgb(94, 46, 4);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+#message7 {
+  color: rgb(94, 46, 4);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
 .box {
   color: rgb(94, 46, 4);
   font-size: 15vh;
