--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,9 +4,9 @@
   height: 100vh;
   width: 100vh;
 }
+
 body {
   background-color: rgb(232, 192, 158);
-
 }
 
 .title {
@@ -63,6 +63,13 @@ body {
 }
 
 #message7 {
+  color: rgb(94, 46, 4);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+#message2 {
   color: rgb(94, 46, 4);
   align-items: center;
   justify-content: center;
